Fixed popup screen on mobile view

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -1287,14 +1287,10 @@ body.popup-open {
   display: none;
   width: 100%;
   height: 100%;
-  padding: 10vh 20px;
+  padding: 8vh 20px 10vh;
   position: fixed;
   top: 0;
   left: 0;
-  // top: 50%;
-  // left: 50%;
-  // transform: translateX(-50%) translateY(-50%);
-  // min-height: 15em;
   z-index: 99999;
   overflow: auto;
   &.show {
